--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <input type="number" id="income" name="income" class="form-control" autocomplete="off" required value="50000">
         </div>
         <div class="form-group">
+            <!-- this is to select the filing status -->
             <label>Filing Status:</label>
             <div class="form-check">
                 <input type="radio" id="individual" name="filingStatus" class="form-check-input" value="individual" checked>
